update to latest pro_wrapper